<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories"
    android:background="@color/brown">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Categories bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="120dp"
                android:fontFamily="@font/poppins"
                android:text="@string/Categories"
                android:textColor="@color/dark_brown"
                android:textSize="26sp" />

        </LinearLayout>

        <!--Tops, Bottoms, Denims-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="140dp">

                <ImageView
                    android:id="@+id/tops"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:src="@drawable/search_bar"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/tops"/>

                <TextView
                    android:id="@+id/c_tops"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/tops"
                    android:textColor="@color/dark_brown"
                    android:textAlignment="center"
                    android:textSize="20sp"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="140dp">

                <ImageView
                    android:id="@+id/bottoms"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:src="@drawable/search_bar"
                    android:layout_marginStart="10dp"
                    />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/jeans"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/c_bottoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/bottoms"
                    android:textColor="@color/dark_brown"
                    android:textAlignment="center"
                    android:textSize="20sp"/>

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:layout_marginStart="40dp">


        <ImageView
            android:id="@+id/denim"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:src="@drawable/search_bar"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/denim"/>

        <TextView
            android:id="@+id/denims"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/poppins"
            android:text="@string/denims"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>